--- a/.env_sample
+++ b/.env_sample
@@ -25,7 +25,7 @@ TRANS_MAX_RATIO=10
 # ======== filebot ========
 FILEBOT_PORT=7676
 ### results in file names like "The Expanse - S02E07 - The Seventh Man - HD.mkv"
-FILEBOT_FORMAT={plex} - {hd}
+#FILEBOT_FORMAT={plex} - {hd}
 ### prefer titles from the last 30 days but fall back to any title if there are none recent enough
 FILEBOT_FILTER=any{ age < 30 }{ true } || !model.any{ it.age < 30 && it.age != null }
 ### duplicate will fall back to copy if hardlink fails. set to "hardlink" to confirm if hardlinks are working
@@ -64,8 +64,8 @@ JACKETT_PORT=9117
 
 # ======== plex ========
 ### install trakt and subzero but you might need Kitana to see the UI
-PLUGIN_LIST=trakt subzero
-PLEX_WEB_PORT=32400
+#PLUGIN_LIST=trakt subzero
+#PLEX_WEB_PORT=32400
 
 # ======== tautulli ========
 TAUTULLI_PORT=8181
