--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,33 +212,33 @@ services:
       - ${CONFIG_DIR}/jackett:/config
       - ${CONFIG_DIR}/jackett/downloads:/downloads
 
-  plex:
-    image: ghostserverd/plex
-    container_name: plex
-    restart: always
-    ports:
-      - "${PLEX_WEB_PORT}:32400"
-      - "1900:1900"
-      - "3005:3005"
-      - "5353:5353"
-      - "8324:8324"
-      - "32410:32410"
-      - "32412:32412"
-      - "32413:32413"
-      - "32414:32414"
-      - "32469:32469"
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TIMEZONE}
-      - VERSION=latest
-      - PLUGIN_LIST=${PLUGIN_LIST}
-    volumes:
-      - ${CONFIG_DIR}/plex:/config
-      - ${MEDIA_DIR}:/data
-    devices:
-      - "/dev/dri/card0:/dev/dri/card0"
-      - "/dev/dri/renderD128:/dev/dri/renderD128"
+  #plex:
+    #image: ghostserverd/plex
+    #container_name: plex
+    #restart: always
+    #ports:
+    #  - "${PLEX_WEB_PORT}:32400"
+    #  - "1900:1900"
+    #  - "3005:3005"
+    #  - "5353:5353"
+    #  - "8324:8324"
+    #  - "32410:32410"
+    #  - "32412:32412"
+    #  - "32413:32413"
+    #  - "32414:32414"
+    #  - "32469:32469"
+    #environment:
+    #  - PUID=${PUID}
+    #  - PGID=${PGID}
+    #  - TZ=${TIMEZONE}
+    #  - VERSION=latest
+    #  - PLUGIN_LIST=${PLUGIN_LIST}
+    #volumes:
+    #  - ${CONFIG_DIR}/plex:/config
+    #  - ${MEDIA_DIR}:/data
+    #devices:
+    #  - "/dev/dri/card0:/dev/dri/card0"
+    #  - "/dev/dri/renderD128:/dev/dri/renderD128"
 
   tautulli:
     image: ghostserverd/tautulli
@@ -252,7 +252,7 @@ services:
       - TZ=${TIMEZONE}
     volumes:
       - ${CONFIG_DIR}/tautulli:/config
-      - "${CONFIG_DIR}/plex/Library/Application Support/Plex Media Server/Logs:/logs:ro"
+    # - "${CONFIG_DIR}/plex/Library/Application Support/Plex Media Server/Logs:/logs:ro"
 
   heimdall:
     image: ghostserverd/heimdall
@@ -283,7 +283,7 @@ services:
       - bazarr
       - nzbget
       - transmission
-      - plex
+    # - plex
       - tautulli
       - netdata
       - heimdall
