--- a/.env_sample
+++ b/.env_sample
@@ -1,4 +1,5 @@
-# ======== directories ========
+# ======== directories ======== 
+MEDIASERVER_CACHE=/some/directory/media_server/cache
 CONFIG_DIR=/some/directory/media_server/config
 DOWNLOAD_DIR=/some/directory/media_server/downloads
 MEDIA_DIR=/some/directory/media_server/media
@@ -66,6 +67,9 @@ JACKETT_PORT=9117
 ### install trakt and subzero but you might need Kitana to see the UI
 #PLUGIN_LIST=trakt subzero
 #PLEX_WEB_PORT=32400
+
+# ======== jellyfin ========
+JELLYFIN_WEB_PORT=32400
 
 # ======== tautulli ========
 TAUTULLI_PORT=8181
